--- a/src/ui/icon-button/styles.scss
+++ b/src/ui/icon-button/styles.scss
@@ -1,42 +1,124 @@
 @import "@design-system";
 
 .icon-button {
-  @include ui-scale(true);
-  @include ui-text-color;
-  @include ui-text-color-hover;
+  /// COLOR ///
+
+  &.text {
+    --background-color: #{$transparent};
+    --background-hover-color: #{$transparent};
+    --border-color: #{$transparent};
+    --border-hover-color: #{$transparent};
+  }
+
+  &.light {
+    --text-color: #{$gray-dark};
+    --text-hover-color: #{$gray};
+
+    &.contained {
+      --text-color: #{$gray-dark};
+      --text-hover-color: #{$gray};
+      --background-color: #{$white};
+      --background-hover-color: #{$white-darker};
+      --border-color: #{$ui-elements-light-border};
+      --border-hover-color: #{$ui-elements-light-border-hover};
+    }
+
+    &.text {
+      --text-color: #{$white};
+      --text-hover-color: #{$white-darker};
+    }
+  }
+
+  &.dark {
+    &.contained {
+      --text-color: #{$white};
+      --text-hover-color: #{$white-darker};
+      --background-color: #{$black};
+      --background-hover-color: #{$black-light};
+      --border-color: #{$ui-elements-dark-border};
+      --border-hover-color: #{$ui-elements-dark-border-hover};
+    }
+
+    &.text {
+      --text-color: #{$gray-dark};
+      --text-hover-color: #{$gray};
+    }
+  }
+
+  &.danger {
+    &.contained {
+      --text-color: #{$white};
+      --text-hover-color: #{$white};
+      --background-color: #{$danger};
+      --background-hover-color: #{$danger-dark};
+      --border-color: #{$danger};
+      --border-hover-color: #{$ui-elements-danger-border-hover};
+    }
+
+    &.text {
+      --text-color: #{$danger};
+      --text-hover-color: #{$danger-dark};
+    }
+  }
+
+  /// SIZE ///
+
+  &.large {
+    --height: #{$ui-elements-lg-height};
+    --width: #{$ui-elements-lg-height};
+    --font-size: #{$fs-lg};
+  }
+
+  &.medium {
+    --height: #{$ui-elements-md-height};
+    --width: #{$ui-elements-md-height};
+    --font-size: #{$fs-base};
+  }
+
+  &.small {
+    --height: #{$ui-elements-sm-height};
+    --width: #{$ui-elements-sm-height};
+    --font-size: #{$fs-sm};
+  }
+
+  /// SETTING OF VARIABLES ///
+
+  color: var(--text-color);
+  background-color: var(--background-color);
+  border: 1px solid var(--border-color);
+  height: var(--height);
+  width: var(--width);
+  font-size: var(--font-size);
+
+  &:hover {
+    color: var(--text-hover-color);
+    background-color: var(--background-hover-color);
+    border: 1px solid var(--border-hover-color);
+  }
+
+  /// GENERAL ///
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  border-radius: $rounded-lg;
+  transition:
+    0.3s border,
+    0.3s background-color,
+    0.3s color;
+
+  /// PSEUDO-SELECTORS ///
 
   &:disabled {
     opacity: 0.35;
     pointer-events: none;
   }
 
-  &.contained {
-    @include ui-border;
-    @include ui-border-hover;
-    @include ui-bg-color;
-    @include ui-bg-color-hover;
-  }
-
-  &.text {
-    @include ui-text-color;
-    @include ui-text-color-hover;
-
-    &.danger {
-      color: $danger;
-
-      &:hover {
-        color: $danger-dark;
-      }
-    }
-  }
+  /// FOR ICON INSIDE ///
 
   svg {
     width: 20px;
     height: 20px;
   }
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  white-space: nowrap;
 }
