--- a/src/ui/input/styles.scss
+++ b/src/ui/input/styles.scss
@@ -1,13 +1,16 @@
 @import "@design-system";
 
-.textarea {
+.input {
+  height: $ui-elements-md-height;
   border-radius: $rounded-lg;
   background-color: $white;
-  padding: sp(2) sp(3);
+  padding: 0 sp(3);
   color: $gray;
+  outline: none;
   border: 1px solid $ui-elements-light-border;
+  font-size: $fs-sm;
 
-  &:focus-within {
+  &:focus {
     box-shadow: inset 0 0 1px 0 rgba($black, 0.1);
   }
 
@@ -16,26 +19,8 @@
     background-color: transparentize($danger, 0.9);
     color: $danger;
 
-    &:focus-within {
+    &:focus {
       box-shadow: inset 0 0 1px 0 rgba($danger, 0.5);
-    }
-  }
-
-  &__input {
-    line-height: 1.3;
-    color: $gray;
-    resize: none;
-    width: 100%;
-    outline: none;
-    border: none;
-    overflow: hidden;
-    font-size: $fs-sm;
-    background-color: $transparent;
-  }
-
-  &.error {
-    .textarea__input {
-      color: $danger;
     }
   }
 }
