--- a/src/ui/table/components/table-head-cell/styles.scss
+++ b/src/ui/table/components/table-head-cell/styles.scss
@@ -3,21 +3,13 @@
 $table-cell-sizes: (5, 7.5, 10, 12.5, 15, 17.5, 20, 22.5, 25, 27.5, 30, 40, 50);
 
 .table__head-cell {
-  @include ui-border;
-  @include ui-text-color;
-
   background-color: $white-darker;
-  color: $gray !important;
-
+  color: $gray;
   font-weight: 500;
-  border-radius: 0 !important;
-
-  border-top: none !important;
-  border-right: none !important;
-  border-left: none !important;
-
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px solid $ui-elements-light-border;
   line-height: 1.3;
-
   padding: 0 sp(1);
 
   &.small {
