--- a/src/containers/indicators-list-view/styles.scss
+++ b/src/containers/indicators-list-view/styles.scss
@@ -4,10 +4,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  gap: sp(4);
   min-height: calc(
     100svh - var(--header-height) - var(--footer-height) - var(
         --search-bar-height
-      )
+      ) - sp(5)
   );
 }
 
