Removed tailwind, added another reset that is similar to tailwind reset. Fixed styling bugs that appear after removal.

--- a/core/src/components/indicator-card/styles.scss
+++ b/core/src/components/indicator-card/styles.scss
@@ -34,3 +34,9 @@
   font-size: $fs-sm;
   line-height: 1.4;
 }
+
+.indicator-card-loader {
+  border-radius: $rounded-lg;
+  overflow: hidden;
+  height: 200px;
+}
