--- a/core/src/components/search-input/styles.scss
+++ b/core/src/components/search-input/styles.scss
@@ -2,12 +2,12 @@
 
 .search-input {
   border-radius: $rounded-lg;
-  background-color: $white;
-  padding: sp(2) sp(3);
+  background-color: $white-darker;
   color: $gray;
   border: 1px solid $ui-elements-light-border;
   display: flex;
   overflow: hidden;
+  align-items: center;
 
   &:focus-within {
     box-shadow: inset 0 0 1px 0 rgba($black, 0.1);
@@ -19,7 +19,8 @@
     width: 40px;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+    flex-shrink: 0;
 
     &:hover {
       color: $gray;
@@ -38,7 +39,8 @@
     width: 40px;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+    flex-shrink: 0;
 
     & > svg {
       height: 16px;
@@ -57,5 +59,6 @@
     font-size: $fs-sm;
     background-color: $transparent;
     flex-grow: 1;
+    padding: 0;
   }
 }
